# engine

./: .dir-locals.el  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  run.sh
.github/workflows/: build.yml
cmake/: FindGLM.cmake  FindOggVorbis.cmake  FindOpenAL.cmake  FindTomlPlusPlus.cmake
include/glad/: glad.h
rapidxml-1.16/: LICENSE
resources/: audiodata.toml  bgmdata.toml  leveldata.toml
resources/animation/: knuckles.toml  levelselect.toml  movie.toml  sonic.toml  sonic1mania.toml  supersonic.toml  tails.toml
resources/audio/bgm/: bgmconfig.toml
resources/levels/R0/: tiles.tsx  zone0.tmx
resources/levels/R1/: zone0.tmx  zone1.tmx
resources/levels/R2/: tiles.tsx  zone0.tmx  zone1.tmx
resources/levels/R3/: tiles.tsx  zone0.tmx
resources/levels/R4/: tiles.tsx  zone0.tmx
resources/levels/R5/: R5.tsx  zone0.tmx
resources/levels/R9/: zone0.tmx
resources/shaders/default/: default.fs.glsl  default.vs.glsl
resources/shaders/spriteatlas/: spriteatlas.fs.glsl  spriteatlas.vs.glsl
src/: collision.cpp  collision.hpp  components.cpp  components.hpp  components_base.cpp  components_base.hpp  components_default.cpp  components_default.hpp  controls.cpp  controls.hpp  core.cpp  core.hpp  entity_test.cpp  entity_test.hpp  game_object.cpp  game_object.hpp  glad.c  io.cpp  io.hpp  level_scene.cpp  level_scene.hpp  level_select.cpp  level_select.hpp  main.cpp  movie_scene.cpp  movie_scene.hpp  partition_test.cpp  partition_test.hpp  partitioning.cpp  partitioning.hpp  player_constants.cpp  player_constants.hpp  quadtree.cpp  render.cpp  render.hpp  resources.cpp  resources.hpp  scene.cpp  scene.hpp  sound.cpp  (+13 more)
src/engine/collision/: collision.cpp
src/engine/components/: components.cpp  components_audio.cpp  components_base.cpp  components_default.cpp
src/engine/controls/: controls.cpp
src/engine/core/: core.cpp
src/engine/io/: io.cpp
src/engine/player/: player_constants.cpp
src/engine/render/: render.cpp
src/engine/resources/: resources.cpp
src/engine/scenes/: scene.cpp
src/engine/sound/: sound.cpp
src/engine/sprite/: sprite.cpp
src/engine/tiled/: tiled.cpp
src/include/: entity_test.hpp  game_object.hpp  level_scene.hpp  level_select.hpp  movie_scene.hpp  partitioning.hpp  quadtree.hpp  sound_test.hpp  test_scene.hpp  title_screen.hpp
src/include/engine/: collision.hpp  components.hpp  core.hpp  player_constants.hpp  render.hpp  resources.hpp  sound.hpp  sprite.hpp  tiled.hpp
src/old/: game_object.cpp  partition_test.hpp  sprite_scene.hpp
src/screens/: entity_test.cpp  level_scene.cpp  level_select.cpp  movie_scene.cpp  partition_test.cpp  sound_test.cpp  sprite_scene.cpp  test_scene.cpp  title_screen.cpp
